Fix spacing issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
 html {
+
+  padding: 0;
   // background-size: cover;
   // background: #43C6AC;  /* fallback for old browsers */
   // background: -webkit-linear-gradient(to bottom, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
@@ -7,23 +9,31 @@ html {
 }
 
 body {
+  // display: flex;
+  // justify-content: center;
+  // align-content: center;
 
-  display: flex;
-  justify-content: center;
-  align-content: center;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-    background-size: cover;
   background: #43C6AC;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: cover;
+}
+
+#root {
+  padding: 0;
+  margin: 0;
 }
 
 .App {
+  margin: 0;
+  padding: 0;
 }
 
 code {
@@ -32,10 +42,21 @@ code {
 }
 
 nav {
+  width: 100vw;
   height: 50px;
-  margin: 2vmin 0 0 0;
+  padding: 2vmin 0 0 0;
+  margin: 0 0 1vmin 0;
   // background-size: cover;
   // background: rgba(50,50,50,0.7);
+  
+  font-size: calc(24px + (36 - 24) * ((100vw - 300px) / (1800 - 300)));
+  line-height: calc(24px + (36 - 24) * ((100vw - 300px) / (1800 - 300)));
+  font-weight: 700;
+  text-align: center;
+  
+  color: rgb(255, 255, 123);
+  background: red;
+  background-size: cover;
 }
 
 form {
@@ -90,9 +111,10 @@ form {
 .content {
   display: flex;
   justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
 
-  width: 90vw;
+  // width: 90vw;
 }
 
 #search-word {
@@ -129,13 +151,7 @@ form {
 
 h1 {
  
-  margin: 2vmin 0;
-  font-size: calc(24px + (36 - 24) * ((100vw - 300px) / (1800 - 300)));
-  line-height: calc(24px + (36 - 24) * ((100vw - 300px) / (1800 - 300)));
-  font-weight: 700;
-  text-align: center;
 
-  color: rgb(255, 255, 123);
 
 }
 
